fix image on iphone

--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -53,6 +53,7 @@
                 font-size: 0.5rem;
                 margin: auto;
                 width: auto;
+                margin-top: 10px;
             }
         }
     }
